BI004 逆ザヤ防止分析

--- a/bi-s4apps01/costanalysis/webapp/view/Main.view.xml
+++ b/bi-s4apps01/costanalysis/webapp/view/Main.view.xml
@@ -105,7 +105,7 @@
                 <!--部品費逆ザヤ防止分析-->
                 <core:Fragment fragmentName="bi.costanalysis.fragments.COMList" type="XML"/>
                 <!--加工費逆ザヤ防止分析-->
-                <!-- <core:Fragment fragmentName="bi.costanalysis.fragments.PROCESSList" type="XML"/> -->
+                <core:Fragment fragmentName="bi.costanalysis.fragments.PROCESSList" type="XML"/>
             </FlexBox>
         </f:content>
     </f:DynamicPage>
