--- a/bi-s4apps01/recoverymanagement/webapp/view/Report003.view.xml
+++ b/bi-s4apps01/recoverymanagement/webapp/view/Report003.view.xml
@@ -16,7 +16,27 @@
                         </smartfilterbar:customControl>
                     </smartfilterbar:ControlConfiguration>
 
-                    <smartfilterbar:ControlConfiguration id="sfbRep03ConfigFiscalMonth" key="FiscalMonth" label="{i18n>FiscalMonth}" />  
+                    <smartfilterbar:ControlConfiguration id="sfbRep03ConfigFiscalMonth" key="FiscalMonth" label="{i18n>FiscalMonth}" >
+                        <smartfilterbar:customControl>
+                            <Select id="sfbRep03SelFiscalMonth">
+                             <items>
+                                <core:Item id="idRep03Month01" key="01" text="01"></core:Item>
+                                <core:Item id="idRep03Month02" key="02" text="02"></core:Item>
+                                <core:Item id="idRep03Month03" key="03" text="03"></core:Item>
+                                <core:Item id="idRep03Month04" key="04" text="04"></core:Item>
+                                <core:Item id="idRep03Month05" key="05" text="05"></core:Item>
+                                <core:Item id="idRep03Month06" key="06" text="06"></core:Item>
+                                <core:Item id="idRep03Month07" key="07" text="07"></core:Item>
+                                <core:Item id="idRep03Month08" key="08" text="08"></core:Item>
+                                <core:Item id="idRep03Month09" key="09" text="09"></core:Item>
+                                <core:Item id="idRep03Month10" key="10" text="10"></core:Item>
+                                <core:Item id="idRep03Month11" key="11" text="11"></core:Item>
+                                <core:Item id="idRep03Month12" key="12" text="12"></core:Item>
+                             </items>
+                           </Select>
+                        </smartfilterbar:customControl>
+                    </smartfilterbar:ControlConfiguration>
+
                     <smartfilterbar:ControlConfiguration id="sfbRep03ConfigCompanyCode" key="CompanyCode" label="{i18n>company}" /> 
                     <smartfilterbar:ControlConfiguration id="sfbRep03ConfigRecoveryManagementNumber" key="RecoveryManagementNumber" label="{i18n>RecoveryManagementNumber}" /> 
                 </smartfilterbar:controlConfiguration>
