--- a/bi-s4apps01/recoverymanagement/webapp/view/Report004.view.xml
+++ b/bi-s4apps01/recoverymanagement/webapp/view/Report004.view.xml
@@ -16,7 +16,27 @@
                         </smartfilterbar:customControl>
                     </smartfilterbar:ControlConfiguration>
 
-                    <smartfilterbar:ControlConfiguration id="sfbRep04ConfigFiscalMonth" key="FiscalMonth" label="{i18n>FiscalMonth}" />  
+                    <smartfilterbar:ControlConfiguration id="sfbRep04ConfigFiscalMonth" key="FiscalMonth" label="{i18n>FiscalMonth}">
+                        <smartfilterbar:customControl>
+                           <Select id="sfbRep04SelFiscalMonth">
+                             <items>
+                                <core:Item id="idRep04Month01" key="01" text="01"></core:Item>
+                                <core:Item id="idRep04Month02" key="02" text="02"></core:Item>
+                                <core:Item id="idRep04Month03" key="03" text="03"></core:Item>
+                                <core:Item id="idRep04Month04" key="04" text="04"></core:Item>
+                                <core:Item id="idRep04Month05" key="05" text="05"></core:Item>
+                                <core:Item id="idRep04Month06" key="06" text="06"></core:Item>
+                                <core:Item id="idRep04Month07" key="07" text="07"></core:Item>
+                                <core:Item id="idRep04Month08" key="08" text="08"></core:Item>
+                                <core:Item id="idRep04Month09" key="09" text="09"></core:Item>
+                                <core:Item id="idRep04Month10" key="10" text="10"></core:Item>
+                                <core:Item id="idRep04Month11" key="11" text="11"></core:Item>
+                                <core:Item id="idRep04Month12" key="12" text="12"></core:Item>
+                             </items>
+                           </Select>                        
+                        </smartfilterbar:customControl>
+                    </smartfilterbar:ControlConfiguration>
+
                     <smartfilterbar:ControlConfiguration id="sfbRep04ConfigCompanyCode" key="CompanyCode" label="{i18n>company}" /> 
                     <smartfilterbar:ControlConfiguration id="sfbRep04ConfigRecoveryManagementNumber" key="RecoveryManagementNumber" label="{i18n>RecoveryManagementNumber}" /> 
                 </smartfilterbar:controlConfiguration>
