--- a/mm-s4apps01/poposting/webapp/view/Main.view.xml
+++ b/mm-s4apps01/poposting/webapp/view/Main.view.xml
@@ -31,7 +31,7 @@
                     <table:columns>
                         <table:Column autoResizable="true" width="6rem" label="{i18n>Status}">
                             <table:template>
-                                <ObjectStatus state="{ path:'local>Status',formatter:'.formatter.formatState' }" icon="sap-icon://status-positive"/>
+                                <ObjectStatus state="{ path:'local>Status',formatter:'.formatter.formatState' }" icon="{ path:'local>Status',formatter:'.formatter.formatIcon' }"/>
                             </table:template>
                         </table:Column>
                         <table:Column width="15rem" label="{i18n>Message}">
